--- a/security-rest-demo/src/main/resources/application.properties
+++ b/security-rest-demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/securitydb
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_rest_security_db
 spring.datasource.username=root
 spring.datasource.password=123456
 
